--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="profile" href="https://gmpg.org/xfn/11" />
     <title>Gaming Girls Wif Pants</title>
     <meta name="robots" content="max-image-preview:large" />
     <style type="text/css">
@@ -66,18 +67,7 @@
         }
       }
     </style>
-    <link
-      rel="alternate"
-      type="application/rss+xml"
-      title=" &raquo; Feed"
-      href="https://popipopipo.tech/?feed=rss2"
-    />
-    <link
-      rel="alternate"
-      type="application/rss+xml"
-      title=" &raquo; Comments Feed"
-      href="https://popipopipo.tech/?feed=comments-rss2"
-    />
+  
     <script>
       window._wpemojiSettings = {
         baseUrl: "https:\/\/s.w.org\/images\/core\/emoji\/14.0.0\/72x72\/",
@@ -911,11 +901,11 @@
                     <div class="elementor-button-wrapper">
                       <a
                         class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow"
-                        href=""
+                        href="https://www.dextools.io/app/en/ether/pair-explorer/0x38715dec59e74ceda244653a0b1d9c5378b6b059"
                         target="_blank"
                       >
                         <span class="elementor-button-content-wrapper">
-                          <span class="elementor-button-text">Dexscreener</span>
+                          <span class="elementor-button-text">Bexscreener</span>
                         </span>
                       </a>
                     </div>
@@ -2186,11 +2176,11 @@
                     <div class="elementor-button-wrapper">
                       <a
                         class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow"
-                        href=""
+                        href="https://www.dextools.io/app/en/ether/pair-explorer/0x38715dec59e74ceda244653a0b1d9c5378b6b059"
                         target="_blank"
                       >
                         <span class="elementor-button-content-wrapper">
-                          <span class="elementor-button-text">Dexscreener</span>
+                          <span class="elementor-button-text">Dextools</span>
                         </span>
                       </a>
                     </div>
