--- a/index.html
+++ b/index.html
@@ -692,11 +692,11 @@
       rel="https://api.w.org/"
       href="https://popipopipo.tech/index.php?rest_route=/"
     /> -->
-    <!-- <link
+    <link
       rel="alternate"
       type="application/json"
       href="https://popipopipo.tech/index.php?rest_route=/wp/v2/pages/13"
-    /> -->
+    />
     <!-- <link
       rel="EditURI"
       type="application/rsd+xml"
