--- a/index.html
+++ b/index.html
@@ -2273,7 +2273,7 @@
 
         <div class="copyright show">
           <p style="color: #fff; font-weight: 500; font-size: 16px">
-            All rights reserved; Gmeow 2023
+            All rights reserved; GGWP 2023
           </p>
         </div>
       </div>
