--- a/index.html
+++ b/index.html
@@ -688,10 +688,10 @@
       src="pop/wp-includes/js/jquery/jquery-migrate.min5589.js?ver=3.4.1"
       id="jquery-migrate-js"
     ></script>
-    <!-- <link
+     <link
       rel="https://api.w.org/"
       href="https://popipopipo.tech/index.php?rest_route=/"
-    /> -->
+    /> 
     <link
       rel="alternate"
       type="application/json"
@@ -2200,11 +2200,11 @@
                     <div class="elementor-button-wrapper">
                       <a
                         class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow"
-                        href="https://app.uniswap.org/tokens/ethereum/0x8d496b1319002376ed31d1494e66b578db1b09d7"
+                        href="#"
                         target="_blank"
                       >
                         <span class="elementor-button-content-wrapper">
-                          <span class="elementor-button-text">Buy $Gmeow</span>
+                          <span class="elementor-button-text">Buy $GGWP</span>
                         </span>
                       </a>
                     </div>
@@ -2429,7 +2429,5 @@
     ></script>
   </body>
 
-<!-- Mirrored from www.gmeowerc.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 26 Dec 2023 17:21:16 GMT -->
 </html>
 
-<!-- Page cached by LiteSpeed Cache 5.7.0.1 on 2023-10-29 19:38:29 -->
