--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
                     <div class="elementor-button-wrapper">
                       <a
                         class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow"
-                        href="https://www.dextools.io/app/en/ether/pair-explorer/0x38715dec59e74ceda244653a0b1d9c5378b6b059"
+                        href="#"
                         target="_blank"
                       >
                         <span class="elementor-button-content-wrapper">
@@ -2173,11 +2173,11 @@
                     <div class="elementor-button-wrapper">
                       <a
                         class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow"
-                        href="https://www.dextools.io/app/en/ether/pair-explorer/0x38715dec59e74ceda244653a0b1d9c5378b6b059"
+                        href="#"
                         target="_blank"
                       >
                         <span class="elementor-button-content-wrapper">
-                          <span class="elementor-button-text">Dextools</span>
+                          <span class="elementor-button-text">Dexscreener</span>
                         </span>
                       </a>
                     </div>
