--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
                     <div class="elementor-button-wrapper">
                       <a
                         class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow"
-                        href="https://app.uniswap.org/tokens/ethereum/0x8d496b1319002376ed31d1494e66b578db1b09d7"
+                        href="#"
                         target="_blank"
                       >
                         <span class="elementor-button-content-wrapper">
