--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
                     <div class="elementor-button-wrapper">
                       <a
                         class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow"
-                        href="https://t.me/GMEOWERC"
+                        href="https://t.me/GGWPSOL"
                         target="_blank"
                       >
                         <span class="elementor-button-content-wrapper">
@@ -871,7 +871,7 @@
                     <div class="elementor-button-wrapper">
                       <a
                         class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow"
-                        href="https://twitter.com/GMEOWERC"
+                        href="https://twitter.com/GGWP_SOL"
                         target="_blank"
                       >
                         <span class="elementor-button-content-wrapper">
@@ -2112,7 +2112,7 @@
                     <div class="elementor-button-wrapper">
                       <a
                         class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow"
-                        href="https://t.me/GMEOWERC"
+                        href="https://t.me/GGWPSOL"
                         target="_blank"
                       >
                         <span class="elementor-button-content-wrapper">
@@ -2139,7 +2139,7 @@
                     <div class="elementor-button-wrapper">
                       <a
                         class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow"
-                        href="https://twitter.com/GMEOWERC"
+                        href="https://twitter.com/GGWP_SOL"
                         target="_blank"
                       >
                         <span class="elementor-button-content-wrapper">
